[project]
name = "mflux-comfyui"
description = "Mflux stands for Mac Flux, and its main purpose is to **Run the powerful FLUX models from Black Forest Labs locally on your Mac!** This plugin provides a simple way to use Mflux within ComfyUI, suitable for users who are not familiar with terminal usage."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["mflux==0.3.0"]

[project.urls]
Repository = "https://github.com/raysers/Mflux-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "raysers"
DisplayName = "Mflux-ComfyUI"
Icon = ""
