[project]
name = "mflux-comfyui"
description = "[a/Mflux](https://github.com/filipstrand/mflux) could be understood as Mac Flux or MLX Flux. According to the author, FilipStrand, its main purpose is to run the powerful FLUX models from Black Forest Labs locally on your Mac.This plugin provides a simple way to use Mflux within ComfyUI, suitable for users who are not familiar with terminal usage."
version = "1.1.1"
license = {file = "LICENSE"}
dependencies = ["mflux==0.3.0"]

[project.urls]
Repository = "https://github.com/raysers/Mflux-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "raysers"
DisplayName = "Mflux-ComfyUI"
Icon = ""
