[project]
name = "mflux-comfyui"
description = "Simple use of [a/Mflux](https://github.com/filipstrand/mflux) in ComfyUI, suitable for users who are not familiar with terminal usage.\nNOTE: A MLX port of FLUX based on the Huggingface Diffusers implementation."
version = "1.2.4"
license = {file = "LICENSE"}
dependencies = ["mflux==0.4.1"]

[project.urls]
Repository = "https://github.com/raysers/Mflux-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "raysers"
DisplayName = "Mflux-ComfyUI"
Icon = ""
